# cpg2pvg-ai

./: .env.docker  .gitignore  .vercelignore  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_INFO.md  DEPLOYMENT_STATUS_REPORT.md  FILE_MANAGEMENT_ANALYSIS.md  FILE_MANAGEMENT_TEST_RESULTS.md  GITHUB_SETUP_GUIDE.md  Makefile  NEXT_STEPS.md  QUICK_START.md  RAILWAY_DEPLOYMENT_GUIDE.md  README-DEPLOYMENT.md  README-SECURITY.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  auto-deploy.bat  auto-deploy.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  secrets.yaml.example  start-deployment.bat  vercel.json
backend/: .env.example  CELERY_ANALYSIS_REPORT.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_CODE_QUALITY_REPORT.md  COMPREHENSIVE_DEPENDENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.railway  Dockerfile.worker  FINAL_DEPENDENCY_ANALYSIS_REPORT.json  FINAL_DEPENDENCY_ANALYSIS_REPORT.md  OPTIMIZATION_REPORT.md  README.md  alembic.ini  app.py  architecture_validation_report.json  check_dependencies.py  code_analysis_report.json  code_quality_report.txt  core_services_test_report.json  dependency_analysis_report.json  dependency_analyzer.py  dependency_diagram.py  final_quality_report.json  fix_models.py  generate_final_report.py  main.py  manual_dependency_analysis.py  pyproject.toml  railway.json  requirements.cloud.txt  requirements.txt  requirements_clean.txt  requirements_gbk.txt  system_compatibility_report.json  system_integration_test.py  test_imports.py  test_main.py  test_models.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  files.py  guidelines.py  health.py  tasks.py  users.py  workflow.py  workflow_endpoints.py
backend/app/core/: __init__.py  auth.py  celery_app.py  config.py  database.py  enhanced_logger.py  error_handling.py  file_manager.py  llm_client.py  llm_config.py  logger.py  parser.py  redis_client.py  security.py  visualizer.py
backend/app/enums/: common.py
backend/app/middleware/: response_middleware.py
backend/app/schemas/: __init__.py  guideline.py  medical_schemas.py  pvg_schemas.py  task.py  user.py  workflow.py
backend/app/services/: agent_orchestrator.py  cost_optimizer.py  file_storage.py  hierarchical_parser.py  intelligent_agent.py  knowledge_graph.py  medical_agents.py  medical_cache.py  medical_parser.py  minio_setup.py  multimodal_processor.py  multimodal_processor_algorithms.py  multimodal_processor_impl.py  multimodal_processor_tables.py  performance_monitor.py  performance_optimizer.py  progressive_generator.py  pvg_templates.py  quality_controller.py  slow_workflow_orchestrator.py  workflow_orchestrator.py
backend/app/tasks/: __init__.py  guideline_tasks.py
backend/app/utils/: mock_spacy.py
backend/app/workflows/: __init__.py  base.py  types.py
backend/app/workflows/slow_mode/: __init__.py  agent_system.py  cache_system.py  content_generator.py  cost_optimizer.py  document_parser.py  knowledge_graph.py  multimodal_processor.py  orchestrator.py  performance_monitor.py  quality_controller.py
backend/celery_worker/workflow/: base_node.py
backend/celery_worker/workflow_nodes/: node1_medical_parser.py  node2_multimodal_processor.py  node3_knowledge_graph.py  node4_intelligent_agents.py  node5_progressive_generator.py
backend/examples/: medical_parser_usage.py
backend/scripts/: check_compatibility_simple.py  check_system_compatibility.py  code_quality_analyzer.py  comprehensive_code_analysis.py  comprehensive_code_quality_check.py  comprehensive_indentation_fix.py  comprehensive_system_compatibility_check.py  download_nlp_models.py  final_quality_check.py  fix_agents_validation.py  fix_class_keywords.py  fix_encoding.py  fix_indentation.py  fix_indentation_comprehensive.py  fix_long_lines.py  fix_service_modules.py  fix_workflow_nodes.py  generate_final_quality_report.py  optimize_code_formatting.py  quick_syntax_fix.py  refactor_large_components.py  rewrite_workflow_nodes.py  setup_complete_system.py  setup_file_storage.py  setup_llm_providers.py  setup_logging.py  setup_security.py  simple_line_fix.py  simple_quality_analyzer.py  simple_quality_check.py  system_compatibility_check_ascii.py  test_architecture_validation.py  test_complete_workflow.py  test_core_services.py  test_core_services_ascii.py  test_kg_basic.py  test_kg_minimal.py  test_knowledge_graph.py  test_knowledge_graph_simple.py  test_medical_parser.py  (+1 more)
backend/test_documents/: diabetes_guideline.txt
celery_worker/: celery_app.py
frontend/: .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
k8s/: backend.yaml  celery-worker.yaml  compliance.yaml  configmap.yaml  external-secrets.yaml  falco.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  minio.yaml  monitoring-configs.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  opa-gatekeeper.yaml  postgres.yaml  redis.yaml  resource-limits.yaml  (+3 more)
(+51 files in other folders)
