[tool.poetry]
name = "cpg2pvg-ai"
version = "0.1.0"
description = "CPG2PVG-AI: 将临床医学指南转化为公众医学指南的智能系统"
authors = ["CPG2PVG-AI Team <team@cpg2pvg.ai>"]
readme = "README.md"
packages = [{include = "cpg2pvg_ai"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.backend.dependencies]
# Web框架
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# 数据库
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"

# Redis和缓存
redis = "^5.0.1"
aioredis = "^2.0.1"

# Celery任务队列
celery = "^5.3.4"
flower = "^2.0.1"

# 认证和安全
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# 配置管理
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# 文件处理
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"
pdfplumber = "^0.10.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

# AI/ML集成
openai = "^1.3.7"
anthropic = "^0.7.8"
transformers = "^4.35.2"
torch = "^2.1.0"
tiktoken = "^0.5.2"

# 医学NLP
scispacy = "^0.5.1"
spacy = "^3.7.2"
negspacy = "^1.0.2"

# 数据处理
pandas = "^2.1.3"
numpy = "^1.25.2"

# 图像处理
Pillow = "^10.1.0"
opencv-python = "^4.8.1.78"

# 网络请求
httpx = "^0.25.2"
aiohttp = "^3.9.1"

# 文件存储
minio = "^7.2.0"
boto3 = "^1.34.7"

# 监控和日志
prometheus-client = "^0.19.0"
structlog = "^23.2.0"

# 工具库
python-dotenv = "^1.0.0"
click = "^8.1.7"
rich = "^13.7.0"
typer = "^0.9.0"
tenacity = "^8.2.3"

# 文档处理
langchain = "^0.0.350"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"

# 数据验证
email-validator = "^2.1.0"
phonenumbers = "^8.13.25"

# 性能优化
orjson = "^3.9.10"

[tool.poetry.group.frontend.dependencies]
# 前端依赖在package.json中管理

[tool.poetry.group.dev.dependencies]
# 后端开发工具
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

# 前端开发工具
eslint = "^8"
prettier = "^3.1.0"
typescript = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "celery_worker"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app", "celery_worker"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]